--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
     }
 
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
