--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,12 @@ android {
         }
     }
 
+    dataBinding{
+        enabled true
+    }
 }
+
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
@@ -46,5 +51,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.balysv:material-ripple:1.0.2' // for ripple effect
+
 
 }
