--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment:2.3.0-alpha02"
     implementation "androidx.navigation:navigation-ui:2.3.0-alpha02"
 
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
     implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
