--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
     compile 'com.roughike:bottom-bar:2.3.1'
 
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+
 
 }
