--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
@@ -58,7 +61,7 @@ dependencies {
     implementation 'com.balysv:material-ripple:1.0.2' // for ripple effect
 
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
-    compile 'com.roughike:bottom-bar:2.3.1'
+    implementation 'com.roughike:bottom-bar:2.3.1'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
 
