--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,38 +32,29 @@ apply plugin: 'com.google.gms.google-services'
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
     implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.navigation:navigation-fragment:2.3.0-alpha02"
-    implementation "androidx.navigation:navigation-ui:2.3.0-alpha02"
-
+    implementation 'androidx.navigation:navigation-fragment:2.3.0-alpha02'
+    implementation 'androidx.navigation:navigation-ui:2.3.0-alpha02'
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
-
     implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    implementation 'com.balysv:material-ripple:1.0.2' // for ripple effect
-
+    implementation 'com.balysv:material-ripple:1.0.2'
+    // for ripple effect
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
     implementation 'com.roughike:bottom-bar:2.3.1'
-
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
-
-
+    implementation files('libs/pipinyin-0.9.1.jar')
 }
