--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
     implementation files('libs/pipinyin-0.9.1.jar')
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
