--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         jcenter()
         mavenCentral()
 
+
+
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
@@ -16,14 +19,15 @@ buildscript {
         // in the individual module build.gradle files
     }
 
+
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
 
-        
     }
 }
 
