--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
 
 }
