--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.gauravk.bubblenavigation:bubblenavigation:1.0.7'
-//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
     implementation files('libs/pipinyin-0.9.1.jar')
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 }
